Revert "Revert "upgrade gatling""
This reverts commit 9c0b6f147d4bad9bd6c7876a92e7075a7c4f7c17.